# rules_license

./: .gitignore  .pre-commit-config.yaml  BUILD  CODEOWNERS  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  deps.bzl  version.bzl
.bazelci/: bzlmod_tests.yml  presubmit.yml  tests.yml
.bcr/: metadata.template.json  presubmit.yml  source.template.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  main.yml  pr.yml  release.yml  release_prep.sh
admin/refresh_spdx/: README.md  add_licenses.py
distro/: BUILD  check_build.sh
doc_build/: BUILD  merge.py
docs/: ADD_PKG_MGR.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  index.md  latest.md  license_kinds.md
docs/_includes/: head-custom.html  head.html
examples/: BUILD  README.md
examples/manifest/: BUILD  android_mock.bzl  license_display.sh  main.sh  (+2 more)
rules/: BUILD  check_licenses_shim.bzl  compliance.bzl  current_module_package_info.bzl  default_license.bzl  gather_licenses_info.bzl  gather_metadata.bzl  license.bzl  license_impl.bzl  license_kind.bzl  license_policy_check.bzl  license_policy_provider.bzl  licenses_core.bzl  package_info.bzl  providers.bzl  sbom.bzl
rules_gathering/: BUILD  gather_metadata.bzl  gather_packages.bzl  gathering_providers.bzl  generate_sbom.bzl  toolchains.bzl
sample_reports/: BUILD
tests/: BUILD  Bar.java  Hello.java  LICENSE  LICENSE.extra  bar.cc  hello.cc  hello_cc_copyrights.golden  hello_java_copyrights.golden  hello_licenses_test.py  license_test_utils.py
tools/: BUILD  checker_demo.py  embed_licenses_text.py  sbom.py  test_helpers.bzl  write_sbom.py  write_workspace_sbom.py
(+44 files in other folders)
