module(
    name = "rules_license",
    version = "0.0.4",  # Keep in sync with version.bzl
    compatibility_level = 1,
)

# Note: rules_license must not depend on any other repositories if you are
# just using basic rules under //rules/... and //licenses.

# TODO(aiuto): Create an extension to enable the rules under //tools/...
# That will require rules_python, which we do not want to force on people who
# do not need //tools.
