module(
    name = "rules_license",
    version = "1.0.0-supply-chain",  # Keep in sync with version.bzl
    compatibility_level = 1,
)

# NOTE: rules_license must normaly not depend on any other repositories.
# This version allows for forwards compatibility to bazel-contrib/supply-chain
bazel_dep(name = "package_metadata", version = "0.0.5")

# TODO(aiuto): Create an extension to enable the rules under //tools/...
# That will require rules_python, which we do not want to force on people who
# do not need //tools.

# Only for development
bazel_dep(name = "bazel_skylib", version = "1.7.1", dev_dependency = True)
bazel_dep(name = "rules_cc", version = "0.2.2", dev_dependency = True)
bazel_dep(name = "rules_java", version = "8.16.1", dev_dependency = True)
bazel_dep(name = "rules_pkg", version = "1.0.1", dev_dependency = True)
bazel_dep(name = "rules_python", version = "0.35.0", dev_dependency = True)
bazel_dep(name = "rules_testing", version = "0.6.0", dev_dependency = True)
bazel_dep(name = "stardoc", version = "0.6.2", dev_dependency = True)
